@@ -27,7 +27,7 @@
 
 #ifndef lint
 static  char sccsid[] = "@(#)s_err.c	1.11 5/17/93 (C) 1992 Darren Reed";
-static char *rcs_version = "$Id: s_err.c,v 1.16 1999/05/05 03:11:25 db Exp $";
+static char *rcs_version = "$Id: s_err.c,v 1.17 1999/05/13 03:10:45 db Exp $";
 #endif
 
 static	char	numbuff[512];
@@ -536,10 +536,11 @@ static	char *	replies[] = {
 /* 475 ERR_BADCHANNELKEY, */	":%s 475 %s %s :Cannot join channel (+k)",
 /* 476 ERR_BADCHANMASK, */	":%s 476 %s %s :Bad Channel Mask",
 /* 477 ERR_MODELESS, */		":%s 477 %s %s :Channel does not support modes",
-/* 478 ERR_BANLISTFULL, */	":%s 478 %s :Channel ban list is full",
-
-/* 479 ERR_JUPEDCHAN, */	":%s 479 %s :Channel is locally juped",
-/* 480 */	(char *)NULL,
+/* 478 ERR_BANLISTFULL, */	":%s 478 %s %s %s :Channel ban list is full",
+/* 479 ERR_BADCHANNAME */
+                ":%s 479 %s %s :Cannot join channel (illegal name)",
+/* 480 ERR_JUPEDCHAN, */
+                ":%s 480 %s %s :Cannot join channel (locally juped)",
 /* 481 ERR_NOPRIVILEGES, */
 		":%s 481 %s :Permission Denied- You're not an IRC operator",
 /* 482 ERR_CHANOPRIVSNEEDED, */	":%s 482 %s %s :You're not channel operator",
